For some reason a large horizontal push to the right was causing the scrollbar to appear along x axis even though there was no content, no margin, no padding to account for this. hiding the overflow resolved this rare case.

--- a/player.scss
+++ b/player.scss
@@ -183,7 +183,7 @@ hr {
 	border: solid 2px #BBBBBB;
 	border-radius: 5px;
 	padding: 0px;
-
+	overflow-x: hidden;
 }
 .Modal_Content h1 {
 	background-color: #BBBBBB;
